--- a/sounds/index.html
+++ b/sounds/index.html
@@ -6,7 +6,7 @@
 
 
 
-  
+
 <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width">
   <title>Science Olympiad | Sounds of Music | Pitch Tester</title>
@@ -30,7 +30,7 @@ select{
 	font-size: 18px;
 }
 .note-display{
-	background-color: SlateGray;    
+	background-color: SlateGray;
 }
 .note-name-div{
 	margin: 0px;
@@ -71,16 +71,16 @@ select{
   background-color: lightskyblue;
 }
 #note-5{
-  background-color: turquoise;
+  background-color: lightskyblue;
 }
 #note-6{
-  background-color: turquoise;
+  background-color: lightskyblue;
 }
 #note-7{
-  background-color: turquoise;
+  background-color: lightskyblue;
 }
 #note-8{
-  background-color: turquoise;
+  background-color: lightskyblue;
 }
 #bonus-note{
   background-color: lightgreen;
@@ -154,7 +154,7 @@ select{
 		  <option value="Bb" data-semitones="1">Bb</option>
 		  <option value="B" data-semitones="2">B</option>
 		</select>
-		
+
 		<select id="bonus-degree-select" onchange="updateBonus()">
           <option value="1">1</option>
           <option value="2">2</option>
@@ -169,10 +169,10 @@ select{
 	  </div>
 	  -->
   </div>
-	  <div id="note-results"> 
+	  <div id="note-results">
 		<div id="note-1" class="note-result" onclick="toggleNote(this,1)">
 		  <div id="note-1-display" class="note-display">
-			<div class="note-name-div"><p id="note-1-name" class="note-name-p">--</p></div>			
+			<div class="note-name-div"><p id="note-1-name" class="note-name-p">--</p></div>
 		  <span id="note-1-target-freq" class="target-freq">--</span></div>
 		  <div class="frequency">000.00 Hz</div>
 		  <div class="cent">00 cents</div>
@@ -302,7 +302,7 @@ function updateFrequencies(){
 		whichNote++;
 	}
 	var semi = whichNote-9;
-	
+
 	document.querySelector('#note-1-target-freq').innerHTML=calcFreqR(110,semi,tonicDegree);
 	document.querySelector('#note-2-target-freq').innerHTML=calcFreqR(110,(semi+2),tonicDegree);
 	document.querySelector('#note-3-target-freq').innerHTML=calcFreqR(110,semi+4,tonicDegree);
@@ -358,9 +358,9 @@ function updateBonus(){
 		noteList.push(noteList.shift())
 		whichNote++;
 	}
-      
+
 	var semi = whichNote-9;
-  
+
   document.querySelector('#bonus-note-target-freq').innerHTML=calcFreqR(110,semi,Number(bonusDegree));
   document.querySelector('#bonus-note-name').innerHTML=bonusNote+bonusDegree;
   document.querySelector('#bonus-note').childNodes[3].innerHTML = '00.00';
@@ -451,7 +451,7 @@ function updateData(){
 	  detected.push({time: Date.now(), frequency: pitchDetect(dataArray,threshold,context.sampleRate)});
 	  silenceStart = Date.now();
   }
-  
+
   //populate new array of all frequencies that are less than 3 seconds old
   for(var i=0;i<detected.length;i++){
 	  if(Date.now() - detected[i].time > 3000){
@@ -461,10 +461,10 @@ function updateData(){
 		  sorted.push(detected[i].frequency);
 	  }
   }
-  
+
   //sort this new array by frequency
   sorted.sort();
-  
+
   //if enough frequencies in sorted array, take the mean of the interquartile
   if(sorted.length>3){
 	  var quartile = Math.round(sorted.length/3);
@@ -478,14 +478,14 @@ function updateData(){
   }else{
 	  meanFreq = '00.00';
   }
-  
+
   if(newSelectedNote){
 	  detected.length = 0;
 	  newSelectedNote = false;
 	  saved = false;
 	  silenceStart = Date.now();
   }
-  
+
   if(Date.now() - silenceStart > 1000){
 	  if(!saved){
 	  savedFreq = meanFreq;
@@ -499,12 +499,12 @@ function updateData(){
 	  saved = false;
 	  document.getElementById('frequency').innerHTML = meanFreq;
   }
-  
+
   /*document.getElementById('silence').innerHTML = Date.now() - silenceStart;
   document.getElementById('sorted').innerHTML = sorted.length;
   document.getElementById('raw-frequency').innerHTML = pitchDetect(dataArray,threshold,context.sampleRate);
   */
-  
+
   if(selectedNote){
 	  var displayedFreq = Number(document.getElementById('frequency').innerHTML);
 	  var targetFreq = freqList[selectedNoteDegree-1];
@@ -528,7 +528,7 @@ function differenceFunction(tau,array,window){
 }
 
 function pitchDetect(bufferArray,threshold,sampleRate){
-  
+
   var windowSize = Math.round(bufferArray.length/2)-10;
   var dOf = [];
   var dPrimeOf = [];
@@ -536,33 +536,33 @@ function pitchDetect(bufferArray,threshold,sampleRate){
   var period = 0;
   var cumulative = 0;
   var periodicity=0;
-  dPrimeOf[0]=1;  
-  
+  dPrimeOf[0]=1;
+
   for(var tau=1;tau<bufferArray.length-windowSize;tau++){
 
 	dOf[tau]=differenceFunction(tau,bufferArray,windowSize);
 	cumulative += dOf[tau];
 	dPrimeOf[tau]=dOf[tau]*tau/cumulative;
-	
+
 	if(minima.length<30){
 		if(tau>2 && dPrimeOf[tau-1]<dPrimeOf[tau-2] && dPrimeOf[tau-1]<dPrimeOf[tau] && dPrimeOf[tau-1]<threshold){
 		  minima.push(tau-1);
-		}	
+		}
 	}
-	
+
 	for (var m=0;m<minima.length-1;m++){
 	  var mult = minima[m]/minima[0];
 	  var p = Math.abs((Math.round(mult)- mult)/mult);
 	  if(p > periodicity){
 		periodicity = p;
 	  }
-	 
+
 	  if(periodicity<0.08){
 		var lastMin = minima[minima.length-1];
 		var interpolated = quadraticInterpolate(lastMin-1,dOf[lastMin-1],lastMin,dOf[lastMin],lastMin+1,dOf[lastMin+1])
 		period = interpolated/Math.round(lastMin/minima[0]);
 	  }
-	  
+
 	}
   }
   return sampleRate/period;
@@ -573,7 +573,7 @@ function quadraticInterpolate(x1,y1,x2,y2,x3,y3){
   var a = (y1*(x2-x3)-y2*(x1-x3)+y3*(x1-x2))/denom;
   var b = (x1*x1*(y2-y3)-x2*x2*(y1-y3)+x3*x3*(y1-y2))/denom;
   var vert_X = -(b/(2*a));
-  
+
   return vert_X;
 }
 </script>
